--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Frontend stuff
+*node_modules/
+*package.json
+*package-lock.json
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
