Trying and failing to set up docker. I did get tailwind started tho.

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine:latest
-RUN apk update
-RUN apk add py-pip
-RUN apk add --no-cache python3-dev 
-RUN pip install --upgrade pip
-RUN pip --no-cache-dir install -r requirements.txt
-CMD ["python3", "app.py"]
+FROM python:3.11
+WORKDIR /GeminiCompetition/Backend
+COPY . .
+RUN pip install --no-cache-dir -r requirements.txt
+EXPOSE 8888
+
+CMD ["python3", "./app.py"]
