--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:18-alpine
+WORKDIR /GeminiCompetition/Frontend
 COPY package.json .
 RUN npm install
 COPY . .
+RUN npm run build
 EXPOSE 8080
-CMD [ "npx", "vite" ]
+CMD [ "npm", "run", "preview" ]
