got docker working!

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.11
 WORKDIR /GeminiCompetition/Backend
 COPY . .
-RUN pip install --no-cache-dir -r requirements.txt
-EXPOSE 8888
-
-CMD ["python3", "./app.py"]
+RUN pip --no-cache-dir install -r requirements.txt
+EXPOSE 8080
+CMD ["python3", "app.py"]
