--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -3,6 +3,4 @@ WORKDIR /GeminiCompetition/Frontend
 COPY package.json .
 RUN npm install
 COPY . .
-RUN npm run build
-EXPOSE 8080
-CMD [ "npm", "run", "preview" ]
+CMD ["npm", "run", "dev"]
