--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,40 +1,111 @@
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.2
+aiosignal==1.3.1
 annotated-types==0.7.0
+arrow==1.2.3
+astroid==2.15.6
+asttokens==2.4.0
+attrs==24.2.0
 beautifulsoup4==4.12.3
+binaryornot==0.4.4
+bitarray==2.9.2
+bitstring==4.1.4
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.6.2
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+cloud-sql-python-connector==1.11.0
+cookiecutter==2.3.0
+cryptography==42.0.5
+Cython==0.29.36
+dill==0.3.7
+docopt==0.6.2
+docutils==0.20.1
+ecdsa==0.18.0
+esptool==4.7.0
 Flask==3.0.3
 Flask-Cors==4.0.1
+frozenlist==1.4.1
 google==3.0.0
 google-ai-generativelanguage==0.6.6
 google-api-core==2.19.1
 google-api-python-client==2.135.0
 google-auth==2.30.0
 google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.1
+google-crc32c==1.5.0
 google-generativeai==0.7.1
+google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
 grpcio==1.64.1
 grpcio-status==1.62.2
 httplib2==0.22.0
 idna==3.7
+intelhex==2.3.0
+isort==5.12.0
 itsdangerous==2.2.0
+jedi==0.19.0
 Jinja2==3.1.4
+Kivy==2.2.1
+Kivy-Garden==0.1.5
+kivy-ios==2023.8.24
+lazy-object-proxy==1.9.0
+machine==0.0.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.0.5
+mypy==1.5.1
+mypy-extensions==1.0.0
+numpy==1.24.1
+opencv-python==4.9.0.80
+openstep-parser==1.5.4
+packaging==23.0
+parso==0.8.3
+pbxproj==3.5.0
+Pillow==9.4.0
+platformdirs==3.10.0
 proto-plus==1.24.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycparser==2.21
+pycrypto==2.6.1
 pydantic==2.7.4
 pydantic_core==2.18.4
+Pygments==2.16.1
+pylint==2.17.5
+PyMySQL==1.1.1
 pyparsing==3.1.2
+pyserial==3.5
+pytesseract==0.3.10
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-slugify==8.0.1
+PyYAML==6.0.1
+reedsolo==1.7.0
 requests==2.32.3
+rich==13.5.2
 rsa==4.9
+Send2Trash==1.8.2
+sh==2.0.6
+six==1.16.0
 soupsieve==2.5
+SQLAlchemy==2.0.32
+text-unidecode==1.3
+thonny==4.1.2
+toml==0.10.2
+tomlkit==0.12.1
 tqdm==4.66.4
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
+websockets==11.0.3
 Werkzeug==3.0.3
+wrapt==1.15.0
+yarl==1.9.4
