Added the job match stuff

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.11
 WORKDIR /GeminiCompetition/Backend
 COPY . .
+RUN pip install --upgrade pip
 RUN pip --no-cache-dir install -r requirements.txt
 EXPOSE 8080
 CMD ["python3", "app.py"]
