--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "netlify-cli": "^16.9.3",
     "postcss": "^8.4.39",
     "tailwind-forms": "^1.0.6",
     "tailwindcss": "^3.4.6",
